--- a/RGBLocalization/RGBLocalization.csproj
+++ b/RGBLocalization/RGBLocalization.csproj
@@ -61,6 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageMap.cs" />
+    <Compile Include="Pose3D.cs" />
+    <Compile Include="Pose3DTests.cs" />
     <Compile Include="RGBMatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RGBMatchTests.cs" />
