Build 3D point cloud from image map and pose data
Yet to visualize the data to make sure that what i'm doing is right.

--- a/RGBLocalization/RGBLocalization.csproj
+++ b/RGBLocalization/RGBLocalization.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ImageMap.cs" />
+    <Compile Include="ImgaeMapTests.cs" />
     <Compile Include="Pose3D.cs" />
     <Compile Include="Pose3DTests.cs" />
     <Compile Include="RGBMatch.cs" />
