Refactored interfaces to feature extraction, feature descriptors
And plumb feature descriptors through to the map file.

--- a/RGBLocalization/RGBLocalization.csproj
+++ b/RGBLocalization/RGBLocalization.csproj
@@ -61,6 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageFeatureMatching.cs" />
+    <Compile Include="ImageFeatures.cs" />
+    <Compile Include="StreamTracker.cs" />
     <Compile Include="ImageMap.cs" />
     <Compile Include="ImgaeMapTests.cs" />
     <Compile Include="Pose3D.cs" />
