Implemented pose inference from scale invariant world points
Also implemented matlab like matrix Replicate and got rid of rids used
to make up for the lack of it.

--- a/RGBLocalization/RGBLocalization.csproj
+++ b/RGBLocalization/RGBLocalization.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pose3DSolver.cs" />
     <Compile Include="ImageFeatureMatching.cs" />
     <Compile Include="ImageFeatures.cs" />
     <Compile Include="StreamTracker.cs" />
