--- a/RGBLocalization/RGBLocalization.csproj
+++ b/RGBLocalization/RGBLocalization.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CamLocalization.cs" />
     <Compile Include="Pose3DSolver.cs" />
     <Compile Include="ImageFeatureMatching.cs" />
     <Compile Include="ImageFeatures.cs" />
